// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Clipboard Snapshot Tests > Displays Clipboard 1`] = `
<div>
  <div
    class="_clipboard_15kq6_2"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r0:"
  >
    <div
      class="_input_1p31i_2 _clipboard__input_1v3pf_2"
      data-readonly="true"
    >
      <input
        class="_input__field_1p31i_35"
        data-part="control"
        data-scope="clipboard"
        readonly=""
        type="text"
        value="Test Message"
      />
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_1d12a_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip::r1::trigger"
        type="button"
      >
        <span
          class="_icon_i4xp0_2 _icon--file-copy_i4xp0_202"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays disabled Clipboard 1`] = `
<div>
  <div
    class="_clipboard_15kq6_2 _clipboard--disabled_15kq6_18"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r2:"
  >
    <div
      class="_input_1p31i_2 _clipboard__input_1v3pf_2"
      data-disabled="true"
      data-readonly="true"
    >
      <input
        class="_input__field_1p31i_35"
        data-part="control"
        data-scope="clipboard"
        disabled=""
        readonly=""
        type="text"
        value="Test Message"
      />
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_1d12a_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        disabled=""
        id="tooltip::r3::trigger"
        type="button"
      >
        <span
          class="_icon_i4xp0_2 _icon--file-copy_i4xp0_202"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays loading Clipboard 1`] = `
<div>
  <div
    class="_clipboard_15kq6_2"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r4:"
  >
    <div
      class="_input_1p31i_2 _input--with-actions_1p31i_32 _clipboard__input_1v3pf_2"
      data-readonly="true"
    >
      <input
        class="_input__field_1p31i_35"
        data-part="control"
        data-scope="clipboard"
        readonly=""
        type="text"
        value="Test Message"
      />
      <div
        class="_input__actions_1p31i_61"
      >
        <span
          class="_spinner_o7c7y_10 _spinner--primary_o7c7y_29 _spinner--xs_o7c7y_14 _input__actions__loading_1p31i_66"
          role="progressbar"
        >
          <svg
            class="_spinner__svg_o7c7y_32"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <g
              transform="translate(-237.694 -93.932)"
            >
              <path
                d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                transform="translate(5486 4225)"
              />
              <circle
                cx="1"
                cy="1"
                r="1"
                transform="translate(248.694 114.932)"
              />
              <circle
                cx="1"
                cy="1"
                r="1"
                transform="translate(238.694 104.932)"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_1d12a_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip::r5::trigger"
        type="button"
      >
        <span
          class="_icon_i4xp0_2 _icon--file-copy_i4xp0_202"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays masked Clipboard 1`] = `
<div>
  <div
    class="_clipboard_15kq6_2"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r6:"
  >
    <div
      class="_input_1p31i_2 _input--with-actions_1p31i_32 _clipboard__input_1v3pf_2"
      data-readonly="true"
    >
      <input
        class="_input__field_1p31i_35"
        data-part="control"
        data-scope="clipboard"
        readonly=""
        type="password"
        value="Test Message"
      />
      <div
        class="_input__actions_1p31i_61"
      >
        <button
          class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
          type="button"
        >
          <span
            class="_icon_i4xp0_2 _icon--eye-off_i4xp0_196"
          />
        </button>
      </div>
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_1d12a_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip::r7::trigger"
        type="button"
      >
        <span
          class="_icon_i4xp0_2 _icon--file-copy_i4xp0_202"
        />
      </button>
    </div>
  </div>
</div>
`;
